# lazy-mcp

./: LICENSE  README.md  TODO.md  hatch_build.py  pyproject.toml
backend/: mcp_config.json  pyproject.toml
backend/src/: api.py  config_utils.py  llm_client.py  mcp_client.py  memory_log_handler.py  models.py
frontend/: README.md  index.html  package.json  vite.config.js
frontend/src/: App.jsx  style.css
frontend/src/components/: ChatWindow.jsx  LogWindow.jsx  Menu.jsx  ToolCallModal.jsx
frontend/src/hooks/: useAgents.js  useChatHistory.js  useChatWebSocketEffect.js  useLogs.js  useToolCallWebSocket.js
lazy_mcp/: __main__.py
lazy_mcp/backend/: api.py  llm_client.py  main.py  models.py
resources/: default.json
src/lazy_mcp/: __main__.py  api.py  config_utils.py  llm_client.py  mcp_client.py
webapp/: README.md  main.py  pyproject.toml
webapp/backend/: pyproject.toml
webapp/backend/src/: llm_client.py  mcp_client.py
webapp/frontend/: App.jsx  index.html  package.json  style.css
