[project]
name = "lazy-mcp"
version = "0.1.0"
description = "Unified CLI for lazy-mcp: serves backend and frontend, builds frontend, opens browser."
authors = [
    { name = "Max Ostrowski", email = "max.ostrowski@potassco.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "python-dotenv",
    "pydantic",
    "anyio",
    "platformdirs",
    "mcp",
    "websockets",
    "uv"
]

[project.scripts]
lazy-mcp = "lazy_mcp.__main__:main"


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
lazy_mcp = ["backend/resources/default.json"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
