[tool.hatch.build.targets.wheel]
packages = ["src/lazy_mcp"]
include = ["src/lazy_mcp/static/**"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazy-mcp"
version = "0.1.0"
description = "Unified CLI for lazy-mcp: serves backend and frontend, builds frontend, opens browser."
authors = [{ name = "Max Ostrowski", email = "max.ostrowski@potassco.com" }]
readme = "README.md"
dependencies = [
		"fastapi",
		"uvicorn",
		"openai",
		"python-dotenv",
		"pydantic",
		"anyio",
		"platformdirs",
		"mcp",
		"websockets",
		"uv"
]

[tool.hatch.build.targets.sdist]
packages = ["src/lazy_mcp"]
include = ["src/lazy_mcp/static/**"]

[project.scripts]
lazy-mcp = "lazy_mcp.__main__:main"

[tool.hatch.build.hooks.custom]
dependencies = []
commands = [
	"python build_frontend.py"
]
